--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,38 @@
-div#tasks{
-    align-items: center;
-    display: flex;
+body{
+    background-color: #A4A4A4;
+}
+div#titulo{
+    margin-top: 10%;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.buttonIn {
+    width: 300px;
+    position: relative;
+}
+
+input {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    outline: none;
+    height: 30px;
+    border-radius: 5px;
+}
+
+button {
+    position: absolute;
+    top: 0;
+    border-radius: 5px;
+    right: 0px;
+    z-index: 2;
+    border: none;
+    top: 2px;
+    height: 30px;
+    cursor: pointer;
+    color: white;
+    background-color: hsl(128, 100%, 56%);
+    transform: translateX(2px);
 }
