--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@ div#titulo{
     margin-left: auto;
     margin-right: auto;
 }
+div#leveTilt{
+    margin-left: 20%;
+}
 
 .buttonIn {
     width: 300px;
