--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,29 @@
 body{
     background-color: #A4A4A4;
 }
-div#titulo{
+.titulo{
+    margin-left: 30%;
+}
+body{
     margin-top: 10%;
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
-div#leveTilt{
-    margin-left: 20%;
+
+#btn-delete{
+    margin-top: 0;
+   float: right;
+}
+#btn-finalizar{
+    margin-top: 0;
+   float: right;
 }
 
+#btn-edit{
+    margin-top: 0;
+    float: right;
+}
 .buttonIn {
     width: 300px;
     position: relative;
@@ -18,7 +31,7 @@ div#leveTilt{
 
 .content--body{
     max-width: fit-content;
-    margin-left: auto;
+   
     margin-right: auto;
 }
 
